fix: add margin to number label
To avoid overlapping between number and project label
we added left and right margin to number label.

--- a/debug/sass/main.scss
+++ b/debug/sass/main.scss
@@ -46,6 +46,8 @@
 .dahham-project-number-label {
   position: absolute;
   padding: 10px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 #dahham-projects {
